Nt.MatchMap -> Nt.Seq

--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@ sequences by just calculating a sum of probabilities:</p>
 
 <p>Where <code>Pr(SeqA, 'A')</code> would be the fractional A content of SeqA. (The
 probability of randomly choosing an 'A' nucleotide in SeqA). (This is available
-from <code>Nt.MatchMap#fractionalContentATGC</code>).</p>
+from <code>Nt.Seq#fractionalContentATGC</code>).</p>
 
 <p>You can then calculate the probability of getting exactly <em>k</em> matches on any
 one alignment (say 15 of 20 for a length-20 query sequence) using the
