--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ of A, T, G, or C with this method. (N = 0.25 x A, 0.25 x G, 0.25 x T, 0.25 x C).
 
 <div class="highlight highlight-javascript"><pre><span class="pl-s">var</span> seqA <span class="pl-k">=</span> (<span class="pl-k">new</span> <span class="pl-en">Nt.Seq</span>()).read(<span class="pl-s1"><span class="pl-pds">'</span>ATNN<span class="pl-pds">'</span></span>);
 
-<span class="pl-s">var</span> content <span class="pl-k">=</span> seqA.fractionalContent();
+<span class="pl-s">var</span> content <span class="pl-k">=</span> seqA.contentATGC();
 <span class="pl-c">/* Looks like:</span>
 <span class="pl-c">  {</span>
 <span class="pl-c">    'A': 1.5,</span>
@@ -496,7 +496,7 @@ of A, T, G, or C with this method. (N = 0.25 x A, 0.25 x G, 0.25 x T, 0.25 x C).
 
 <div class="highlight highlight-javascript"><pre><span class="pl-s">var</span> seqA <span class="pl-k">=</span> (<span class="pl-k">new</span> <span class="pl-en">Nt.Seq</span>()).read(<span class="pl-s1"><span class="pl-pds">'</span>ATNN<span class="pl-pds">'</span></span>);
 
-<span class="pl-s">var</span> content <span class="pl-k">=</span> seqA.fractionalContent();
+<span class="pl-s">var</span> content <span class="pl-k">=</span> seqA.fractionalContentATGC();
 <span class="pl-c">/* Looks like:</span>
 <span class="pl-c">  {</span>
 <span class="pl-c">    'A': 0.375,</span>
